--- a/index.html
+++ b/index.html
@@ -3,16 +3,53 @@
 <head>
 	<meta charset="utf-8">
 	<script>
+		function setSearchEngine(){
+			console.log("Search Engine");
+			
+		}
+
 		// TODO: create a handler
-    window.addEventListener("load", function(){
+   
         // TODO: register the handler
+		
+		
+window.addEventListener("load", function(){
+	let option = document.querySelector("input[name=engine]:checked");
+			let actions = {
+   "google": "https://www.google.com/",
+   "duckduckgo": "https://www.duckduckgo.com/",
+   "bing" : "https://www.bing.com/",
+   "ask" : "https://www.ask.com/"
+};
+		const form = document.getElementById("searchForm");
+		form.addEventListener("submit",setSearchEngine);
+
+		form.setAttribute(action,option);		
+		
     });
+
 	</script>
 </head>
 
 <body>
 
-	<form id="searchForm">
+	<form id="searchForm" method = "get">
+		<input type="text" name = "q" value = "" />
+		<label>
+			Search Engine : Google <input type = "radio" name = "engine" value = "google" />
+		</label>
+		<label>
+			DuckDuckGo <input type = "radio" name = "engine" value="duckduckgo" />
+		</label>
+		<label>
+			Bing <input type="radio" name = "engine" value = "bing" />
+		</label>
+		<label>
+			Ask <input type = "radio" name = "engine" value ="ask" />
+		</label>
+		<input type = "submit" name = "submit" value = "Go" />
+
+
     <!-- TODO: add form elements -->
 	</form>
 
